--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  </head>
-  <body class="bg-cyan-400">
-   <nav class="p-4 bg-white shadow md:flex md:items-center md:justify-between">
-    <div>
-        <span class="text-2xl font-bold cursor-pointer">
-            <img class="h-10 inline" src="tailwind-logo.png">
-            tailwindcss
-        </span>
-    </div>
-    
-    <ul>
-        <li><a href="#" class="text-xl hover:text-cyan-500 duration-500">HOME</a></li>
-    </ul>
-   </nav>
+</head>
 
-  </body>
+<body class="bg-cyan-400">
+    <nav class="p-4 bg-white shadow md:flex md:items-center md:justify-between">
+        <div>
+            <span class="text-2xl font-bold cursor-pointer">
+                <img class="h-10 inline" src="tailwind-logo.png">
+                tailwindcss
+            </span>
+        </div>
+
+        <ul class="md:flex md:items-center z-[-1] md:z-auto md:static
+         absolute bg-white w-full left-0 md:w-auto md:py-0 py-4 pl-7
+         md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500">
+            <li class="mx-4 my-6 md:my-0"><a href="#" class="text-xl hover:text-cyan-500 duration-500">HOME</a></li>
+            <li class="mx-4 my-6 md:my-0"><a href="#" class="text-xl hover:text-cyan-500 duration-500">SERVICE</a></li>
+            <li class="mx-4 my-6 md:my-0"><a href="#" class="text-xl hover:text-cyan-500 duration-500">ABOUT</a></li>
+            <li class="mx-4 my-6 md:my-0"><a href="#" class="text-xl hover:text-cyan-500 duration-500">CONTECT</a></li>
+            <li class="mx-4 my-6 md:my-0"><a href="#" class="text-xl hover:text-cyan-500 duration-500">BLOG'S</a></li>
+
+
+            <button class="bg-cyan-400 text-white font-bold duration-500 px-6 py-2 mx-4 hover:bg-cyan-500 rounded">
+                Get started
+            </button>
+        </ul>
+    </nav>
+
+</body>
+
 </html>
