--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </head>
 
 <body class="bg-cyan-400">
     <nav class="p-4 bg-white shadow md:flex md:items-center md:justify-between">
-        <div>
+        <div class="flex justify-between mx-2 items-center">
             <span class="text-2xl font-bold cursor-pointer">
                 <img class="h-10 inline" src="tailwind-logo.png">
                 tailwindcss
             </span>
+
+            <span class="text-3xl cursor-pointer md:hidden block">
+                <ion-icon name="menu" onclick="Menu(this)"></ion-icon>
+            </span>
+
+           
         </div>
 
-        <ul class="md:flex md:items-center z-[-1] md:z-auto md:static
+        <ul class="ul-list md:flex md:items-center z-[-1] md:z-auto md:static
          absolute bg-white w-full left-0 md:w-auto md:py-0 py-4 pl-7
          md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500">
             <li class="mx-4 my-6 md:my-0"><a href="#" class="text-xl hover:text-cyan-500 duration-500">HOME</a></li>
@@ -32,6 +41,17 @@
         </ul>
     </nav>
 
+
+
+    <script>
+       function Menu(e){
+        let list = document.querySelector(".ul-list");
+        console.log(list);
+        e.name === "menu" ? (e.name = "close", list.classList.add('top-[80px]') , list.classList.add('opacity-100'))
+         :( e.name ="menu", list.classList.remove('top-[80px]') , list.classList.remove('opacity-100'));
+       }
+
+    </script>
 </body>
 
 </html>
